samples/_failures_safe/1761304168_e9d3c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4be098f0.c: In function ‘main’:
./samples/SAFE/__tmp_4be098f0.c:137:9: error: expected declaration or statement at end of input
  137 |         printf("Invalid matrix dimensions\n");
      |         ^~~~~~
./samples/SAFE/__tmp_4be098f0.c:137:9: error: expected declaration or statement at end of input
